Fix extends filename

--- a/templates/flows/flow_filter.html
+++ b/templates/flows/flow_filter.html
@@ -1,4 +1,4 @@
-{% extends "flows/flow_list.haml" %}
+{% extends "flows/flow_list.html" %}
 {% load smartmin sms temba compress i18n %}
 
 {% block title-icon %}
